Working on modpack/ customizability support for tools.